# OKITA

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AnimatedGifBadge.tsx  AudioVisualizer.tsx  ContextMenu.tsx  ControlBar.tsx  CropOverlay.tsx  ExportModal.tsx  InfoModal.tsx  TitleBar.tsx
src/constants/: tooltips.ts
