[package]
name = "tauri-app"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
tauri-plugin-dialog = "2.7.1"

# ==========================================
# ⚡ 배포 빌드(Release) 최적화 및 속도 개선 설정 추가
# ==========================================
[profile.release]
opt-level = 3        # 앱 실행 속도는 최대 효율(레벨 3) 유지
lto = "thin"         # 무겁고 느린 전체 LTO 대신 병렬 분석이 가능한 가벼운 LTO 방식 채택
codegen-units = 16   # 빌드 작업을 여러 코어로 병렬 처리하여 링킹 속도 대폭 상향
strip = true         # 링커가 필요 없는 불필요한 디버그 메타데이터를 제거하여 마지막 조립 시간 및 파일 용량 축소
